--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               <h3 data-i18n="contact.comm.title">هاتف وبريد</h3>
               <p><strong data-i18n="contact.comm.phoneLabel">هاتف:</strong> 0912155998</p>
               <p><strong data-i18n="contact.comm.whatsappLabel">واتساب:</strong> 0912155998</p>
-              <p><strong data-i18n="contact.comm.emailLabel">البريد الإلكتروني:</strong> manahelkheir@gmail.com</p>
+              <p><strong data-i18n="contact.comm.emailLabel">البريد الإلكتروني:</strong> info@manahelalkher.ly</p>
             </div>
             
           </div>
